<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/translation_container">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/select_bar_height"
        app:srcCompat="@drawable/ic_double_arrow"
        android:id="@+id/swap_langs"
        android:layout_centerHorizontal="true"/>
    <Spinner
        android:padding="@dimen/small_margin"
        android:layout_width="0dp"
        android:layout_height="@dimen/select_bar_height"
        android:id="@+id/from_language"
        android:layout_toLeftOf="@id/swap_langs"
        android:layout_toStartOf="@id/swap_langs"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">
    </Spinner>

    <Spinner
        android:layout_width="@dimen/lang_width"
        android:layout_height="@dimen/select_bar_height"
        android:id="@+id/to_language"
        android:layout_toRightOf="@id/swap_langs"
        android:layout_toEndOf="@id/swap_langs"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:padding="@dimen/small_margin">
    </Spinner>

    <EditText

        android:background="@drawable/sh_rectangle"
        android:layout_below="@id/from_language"
        android:layout_width="match_parent"
        android:layout_height="@dimen/translate_field_height"
        android:padding="@dimen/text_margin"
        android:layout_margin="@dimen/small_margin"
        android:paddingBottom="@dimen/img_with_padding"
        android:id="@+id/text_to_translate"
        android:imeOptions="actionDone"
        android:inputType="text"/>
   <ImageView
       android:layout_width="@dimen/img_size"
       android:layout_height="@dimen/img_size"
       android:layout_margin="@dimen/small_margin"
       android:layout_alignBottom="@id/text_to_translate"
       android:layout_alignStart="@id/text_to_translate"
       android:layout_alignLeft="@id/text_to_translate"
       app:srcCompat="@drawable/ic_close"
       android:tint="@color/greyDivider"
       android:id="@+id/clear_text" />
   <ProgressBar
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/progress"
       android:layout_centerInParent="true"
       android:visibility="gone"
       tools:visibility="visible"/>


    <TextView
        android:padding="@dimen/small_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/translate_from"
        android:clickable="true"
        android:textSize="@dimen/hint_text_size"
        android:textColor="@color/greyDivider"
        android:layout_alignBottom="@id/text_to_translate"
        android:layout_alignEnd="@id/text_to_translate"
        android:layout_alignRight="@id/text_to_translate"
        android:visibility="gone"
        tools:visibility="visible"
        tools:text="Перевести с :"/>


    <TextView
        android:padding="@dimen/small_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/language"
        android:textSize="@dimen/to_text_size"
        android:textColor="@android:color/black"
        android:layout_below="@id/text_to_translate"
        android:visibility="gone"
        tools:visibility="visible"
        tools:text="Английский:"/>
    <TextView
        android:padding="@dimen/small_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_translation"
        android:textSize="@dimen/from_text_size"
        android:textColor="@android:color/black"
        android:layout_below="@id/language"
        android:layout_margin="@dimen/small_margin"
        android:paddingRight="@dimen/img_with_padding"
        android:paddingEnd="@dimen/img_with_padding"
        android:background="@drawable/sh_yellow_rectangle"
        android:visibility="gone"
        android:textIsSelectable="true"
        tools:visibility="visible"
        tools:text="Hi"/>

    <TextView
        android:padding="@dimen/small_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/license"
        android:textSize="@dimen/to_text_size"
        android:textColor="@android:color/black"
        android:layout_below="@id/main_translation"
        android:text="@string/license"
        android:visibility="gone"
        tools:visibility="visible"/>

    <CheckBox
        android:layout_width="@dimen/img_size"
        android:layout_height="@dimen/img_size"
        android:button="@drawable/sel_star"
        android:layout_alignEnd="@id/main_translation"
        android:layout_alignRight="@id/main_translation"
        android:layout_alignTop="@id/main_translation"
        android:tint="@color/colorPrimary"
        android:id="@+id/add_to_favorite"
        android:layout_margin="@dimen/small_margin"
        android:visibility="gone"
        tools:visibility="visible"/>
    <LinearLayout
        android:layout_below="@id/main_translation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/minor_translations_container"
        android:orientation="vertical">

    </LinearLayout>

</RelativeLayout>
</ScrollView>