<resources>
    <string name="app_name">TestTranslate</string>
    <string name="title_translate">Перевод</string>
    <string name="title_history">История</string>
    <string name="title_favorites">Избранное</string>


    <string name="detect_text">Перевести с :</string>
    <string name="def_from_lang">Русский</string>
    <string name="def_to_lang">Английский</string>
    <string name="license">Переведено сервисом </string>
    <string name="service_name">«Яндекс.Переводчик»</string>
    <string name="license_url">http://translate.yandex.ru/</string>

    <string name="err_unfortunate">При загрузке данных произошла ошибка</string>
    <string name="err_wrong_key">Неправильный API-ключ</string>
    <string name="err_invalid_key">API-ключ заблокирован</string>
    <string name="err_too_many">Превышено суточное ограничение на объем переведенного текста</string>
    <string name="err_long_text">Превышен максимально допустимый размер текста</string>
    <string name="err_cant_translate">Текст не может быть переведен</string>
    <string name="err_wrong_lang">Заданное направление перевода не поддерживается</string>


</resources>
