<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.sinjvf.testtranslate.main.MainActivity">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:id="@+id/toolbar"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>

    <android.support.design.widget.TabLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:background="@color/colorPrimary"
        android:id="@+id/tabs"
        app:tabMaxWidth="0dp"
        app:tabGravity="fill"
        app:tabMode="fixed"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/stroke"
        android:background="@color/greyDivider"
        android:layout_above="@id/tabs"
        android:id="@+id/divider"/>


    <android.support.v4.view.ViewPager
        android:layout_below="@id/toolbar"
        android:layout_above="@id/divider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/view_pager"/>



</RelativeLayout>
